# Mudlet

./: .appveyor.yml  .clang-format  .clang-tidy  .crowdin.yml  .gitignore  .gitmodules  .imgbotconfig  .inferconfig  .travis.yml  .vcpkg-osx-dependencies  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CODE_OF_CONDUCT.md  COMPILE  CONTRIBS  CONTRIBUTING.md  CPPLINT.cfg  CoreMudlet.lua  Dangerfile  Doxyfile  GUIUtils.lua  Gemfile  INSTALL  Info.plist  LuaGlobal.lua  MudletCPack.cmake  PVS-Studio.cfg  Podfile  README  README.md  README_ThisRepo.md  Send All.xml  TODO  TTextEdit.cpp  TTextEdit.h  TableUtils.lua  build-mudlet-for-windows.sh  build.sh  (+17 more)
src/: .add-braces  .clang-format  .gitignore  3k-mapper.xml  ActionUnit.cpp  ActionUnit.h  AliasUnit.cpp  AliasUnit.h  AltFocusMenuBarDisable.cpp  AltFocusMenuBarDisable.h  Announcer.h  AnnouncerLinux.cpp  AnnouncerMac.h  AnnouncerMac.mm  AnnouncerUnix.cpp  AnnouncerWindows.cpp  CF-loader.xml  CMakeLists.txt  ClientVariables.cpp  ClientVariables.h  CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  ConsoleBuffer.cpp  ConsoleBuffer.h  ConsoleSplitter.cpp  ConsoleSplitter.h  ConsoleSplitterHandle.cpp  ConsoleSplitterHandle.h  DarkTheme.cpp  DarkTheme.h  DefaultClientUtils.cpp  DefaultClientUtils.h  EAction.cpp  EAction.h  EActionGroup.cpp  EActionGroup.h  FileLockChecker.cpp  FileLockChecker.h  (+425 more)
src/doc/: Mudlet_API_Reference.odt  Mudlet_API_Reference_HTML.html
src/edbee_defaults/: Mudlet.tmTheme
src/fonts/noto-color-emoji-2019-11-19-unicode12/: README
src/fonts/noto-color-emoji-2021-07-15-v2.028/: README
src/fonts/noto-color-emoji-2021-11-01-v2.034/: README
src/fonts/twemoji-12.0.1/: LICENSE.md
src/hunspell/: affentry.lo  affixmgr.lo  csutil.lo  dictmgr.lo  filemgr.lo  hashmgr.lo  hunspell.cxx  hunspell.lo  hunzip.lo  libhunspell-1.2.la  phonet.lo  replist.lo  suggestmgr.lo
src/hunspell/.deps/: affentry.Plo  affixmgr.Plo  csutil.Plo  dictmgr.Plo  filemgr.Plo  hashmgr.Plo  hunspell.Plo  hunzip.Plo  phonet.Plo  replist.Plo  suggestmgr.Plo
src/hunspell/.libs/: libhunspell-1.2.la  libhunspell-1.2.lai  libhunspell-1.2.so.0.0.0
src/icons/: mudlet.icns  mudlet.xpm  mudlet_dev.icns  mudlet_ptb.icns
src/irc/: .gitignore  .hg_archival.txt  .hgignore  .hgtags  AUTHORS  CHANGELOG  CMakeLists.txt  Doxyfile  INSTALL  README  TODO  VERSION  communi.pri  communi.pro  configure  icu.pri  libcommuni.pro  libircclient-qt-config.prf  libircclient-qt.prf  libircclient-qt.pro  version.pri
src/irc/doc/: annotated.html  bot.dox  classIrc_1_1Buffer-members.html  classIrc_1_1Buffer.html  classIrc_1_1Rfc-members.html  classIrc_1_1Rfc.html  classIrc_1_1Session-members.html  classIrc_1_1Session.html  classIrc_1_1Util-members.html  classIrc_1_1Util.html  classes.html  client.dox  debugging.dox  deprecated.html  doc.pri  enums.dox  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x68.html  functions_0x69.html  functions_0x6a.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x77.html  functions_0x7e.html  functions_enum.html  (+27 more)
src/irc/examples/: examples.pri  examples.pro
src/irc/features/: communi.prf
src/irc/include/: IrcBuffer  IrcCodecPlugin  IrcCommand  IrcSender  IrcSession  IrcUtil  irc.h  ircbuffer.h  ircbuffer_p.h  irccodecplugin.h  irccommand.h  ircdecoder_p.h  ircglobal.h  ircmessage.h  ircparser_p.h  ircsender.h  ircsession.h  ircsession_p.h  ircutil.h
src/irc/src/: irc.cpp  ircbuffer.cpp  irccodecplugin.cpp  irccommand.cpp  ircdecoder.cpp  ircmessage.cpp  ircparser.cpp  ircsender.cpp  ircsession.cpp  ircutil.cpp  module_build.pri  src.pri  (+2 more)
src/mudlet-lua/: .travis.yml  DebugTools.lua  LuaGlobal.lua  README  README.md  TODO  genDoc.sh  logging.lua  luadoc-guide.txt
src/old_mudlet-lua/: CONTRIBS
src/osx-installer/: mudlet-appdmg.json
src/splash/: Mudlet_splashscreen_main.xcf  credits.md
src/ui/: about_dialog.ui  actions_main_area.ui  aliases_main_area.ui  button_select.ui  check_default_client.ui  color_trigger.ui  composer.ui  connection_profiles.ui  console.ui  custom_lines.ui  custom_lines_properties.ui  delete_profile_confirmation.ui  dlgPackageExporter.ui  dlgPackageExporterInput.ui  extended_search_area.ui  filters_main_area.ui  glyph_usage.ui  help_dialog.ui  irc.ui  keybindings_main_area.ui  lacking_mapper_script.ui  main_window.ui  map_label.ui  mapper.ui  mapper_room_color.ui  module_manager.ui  notes_editor.ui  options_area_aliases.ui  options_area_triggers.ui  package_manager.ui  package_manager_unpack.ui  profile_preferences.ui  profile_preferences.ui.autosave  room_exits.ui  room_properties.ui  room_symbol.ui  scripts_main_area.ui  set_room_area.ui  source_editor_area.ui  source_editor_find_area.ui  (+8 more)
test/: CMakeLists.txt  GUIConsoleTests.mpackage  Makefile.TestsOnWindows  MudletTest.qmake  RunTestsOnWindows.cmd  TBufferStyleTest.cpp  TEntityHandlerTest.cpp  TEntityHandlerTest.h  TEntityResolverTest.cpp  TEntityResolverTest.h  TLinkStoreTest.cpp  TLinkStoreTest.h  TLuaInterfaceTest.cpp  TMxpCustomElementTagHandlerTest.cpp  TMxpEntityTagHandlerTest.cpp  TMxpEntityTagTest.cpp  TMxpFormattingTagsTest.cpp  TMxpSendTagHandlerTest.cpp  TMxpSendTagHandlerTest.h  TMxpStubClient.cpp  TMxpStubClient.h  TMxpTagParserTest.cpp  TMxpTagParserTest.h  TMxpVersionTagTest.cpp
translations/translated/: CMakeLists.txt  generate-translation-stats.lua  it_IT_AdjustableContainer.json  mudlet_ar_EG.ts  mudlet_ar_SA.ts  mudlet_de_DE.ts  mudlet_el_GR.ts  mudlet_en_GB.ts  mudlet_en_PT.ts  mudlet_en_US.ts  mudlet_en_XY.ts  mudlet_es_ES.ts  mudlet_fi_FI.ts  mudlet_fr_FR.ts  mudlet_he_IL.ts  mudlet_it_IT.ts  mudlet_ko_KR.ts  mudlet_nl_NL.ts  mudlet_pl_PL.ts  mudlet_pt_BR.ts  mudlet_pt_PT.ts  mudlet_ru_RU.ts  mudlet_sv_SE.ts  mudlet_tr_TR.ts  mudlet_yd_YD.ts  mudlet_zh_CN.ts  mudlet_zh_TW.ts  mudlet_zh_TW2.ts  qm.qrc  updateqm.pri
(+2564 files in other folders)
